--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,32 @@
-.header {
-  background-image: url("/assets/cover-1.png");
-  background-repeat: no-repeat;
-  background-size: cover;
+.banner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 70vh;
+  /* height: 450px; */
+  background-image: url(/assets/banner.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+.mbappe-pic {
+  position: absolute;
+  left: 1px;
+  bottom: 0;
+}
+.messi-pic {
+  position: absolute;
+  top: 30px;
+  right: 140px;
+}
+.football-bg {
+  position: absolute;
+  right: 1px;
+  bottom: 0;
+}
+.football {
+  position: absolute;
+  right: 1px;
+  bottom: 0;
 }
