change some html code and recheck banner, added some images

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,34 +1,24 @@
 @import url("https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap");
+
 .banner {
-  height: 70vh;
-  background-image: url(/assets/banner.png);
+  background-image: url(assets/banner.png);
+  height: 55vh;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.banner-left-side {
   position: relative;
+}
+
+.banner-info {
+  background-image: url(/assets/title-bg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top;
 }
 
 .banner-title {
   font-family: "Berkshire Swash", cursive;
   color: #ff5e19;
-}
-
-.mbappe-pic {
-  position: absolute;
-  left: 1px;
-  bottom: 0;
-}
-.messi-pic {
-  position: absolute;
-  top: 25px;
-  right: 80px;
-}
-.football-bg {
-  position: absolute;
-  right: 1px;
-  bottom: 0;
-}
-.football {
-  position: absolute;
-  right: 1px;
-  bottom: 0;
 }
